# PaGet

./: LICENSE.txt  Makefile  README.md  go.mod  go.sum  mkdocs.yml  pyproject.toml
cmd/paget/: paget.go
docs/: index.md
manifests/: example.toml
paget/: __init__.py  cli.py  main.py
paget/commands/: command.py  help.py  install.py  update.py  upgrade.py
