[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "paget"
authors = [{name = "Marc Türke"}, {name = "Jonas Weintritt"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "rich"
]

[project.scripts]
paget = "paget.main:main"